<resources>
    <string name="app_name">MES平台</string>
    <string name="description">Manufacturing Execution System</string>
    <string name="discovery">发现</string>
    <string name="profile">我的</string>
    <string name="task">任务</string>
    <string name="operation">业务服务</string>
    <string name="company">熊猫电子装备有限公司</string>
    <string name="hello_blank_fragment">test</string>
    <string name="long_text_test">What is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s when an unknown printer took a galley of type and scrambled it to make a type specimen book it has?</string>
    <string name="digits_password">0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="input_user_name_alert">请输入账号</string>
    <string name="input_password_alert">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_user_name_field_hint">请输入账号</string>
    <string name="login_password_field_hint">请输入密码</string>
    <string name="forget_password_hint">忘记密码，请联系管理员！</string>
    <string name="exit_login">退出登录</string>
    <string name="change_password">修改密码</string>
    <string name="old_password">旧密码</string>
    <string name="password_hint">由6~12位英文、数字组成</string>
    <string name="next_step">下一步</string>
    <string name="new_password">新密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="user_pwd_error">用户或密码错误，请重新输入！</string>
    <string name="task_receive">派工单接收</string>
    <string name="task_execute">派工单执行</string>
    <string name="task_prepare">生产准备</string>
    <string name="task_report">派工单报工</string>
    <string name="task_finish">派工单完工</string>
    <string name="task_description">派工单描述</string>
    <string name="already_report">已报工</string>
    <string name="sender">派工人</string>
    <string name="product_receiver">生产负责人</string>
    <string name="finish">完成</string>
    <string name="report">报工</string>
    <string name="task_search_bar_hint">请输入工单/派工单/产品/生产负责人</string>
    <string name="receive">接收</string>
    <string name="execute">执行</string>
    <string name="basic_info">基本信息</string>
    <string name="task_code">派工单编号</string>
    <string name="task_count">派工单数量</string>
    <string name="product_code">产品编码</string>
    <string name="product_description">产品描述</string>
    <string name="plan_code">工单编号</string>
    <string name="work_order_code">工作令号</string>
    <string name="batch_code">批次号</string>
    <string name="task_status">派工单状态</string>
    <string name="plan_start_time">计划开始时间</string>
    <string name="plan_finish_time">计划完成时间</string>
    <string name="operator">操作工</string>
    <string name="prd_equipment">生产设备</string>
    <string name="actual_start_time">实际开始时间</string>
    <string name="actual_finish_time">实际完成时间</string>
    <string name="get_task_detail_failed">获取派工单详情失败</string>
    <string name="operate_record">操作记录</string>
    <string name="task_detail">派工单详情</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="task_finish_confirm">确定完成该派工单？</string>
    <string name="net_work_error">系统数据异常</string>
    <string name="loading_data">正在加载数据</string>
    <string name="task_receive_success_toast">接收派工单成功</string>
    <string name="task_receive_confirm">确认接受该派工单？</string>
    <string name="operate_guide">作业指导书</string>
    <string name="material_bind">物料绑定</string>
    <string name="material_unbind">物料解绑</string>
    <string name="material_replace">物料替换</string>
    <string name="alarm_report">实时报警</string>
    <string name="factory_manage">生产管理</string>
    <string name="material_search_bar_hint">请输入工单/派工单/产品</string>
    <string name="task_number">派工单数量</string>
    <string name="task_scan_bar_hint">请输入或扫描产品条码</string>
    <string name="scan_product_serial_code">扫描产品条码</string>
    <string name="material">物料</string>
    <string name="material_serial_code">物料条码</string>
    <string name="new_material_serial_code">新物料条码</string>
    <string name="old_material_serial_code">原物料条码</string>
    <string name="history_record">历史记录</string>
    <string name="alarm">报警</string>
    <string name="alarm_detail">警报说明</string>
    <string name="remark_hint">请输入备注信息，最多1000个字</string>
    <string name="alarm_reporter">报警人</string>
    <string name="alarm_report_time">报警时间</string>
    <string name="order">订单</string>
    <string name="plan">计划</string>
    <string name="report_number">报工数量</string>
    <string name="work_reporter">报工人</string>
    <string name="order_code">主计划编号</string>
    <string name="unify_code">统一号</string>
    <string name="man_hour">工时</string>
    <string name="maintain_description">维修描述</string>
    <string name="picture">图片</string>
    <string name="common_search_bar_hint">请扫描或输入</string>
    <string name="task_execute_success_toast">派工单执行成功</string>
    <string name="task_finish_success_toast">完成派工单成功</string>
    <string name="task_execute_confirm">确定执行该派工单？</string>
    <string name="already_report_number">已报工数量</string>
    <string name="remark">备注</string>
    <string name="pwd_changed_message">您的密码修改成功，请使用新密码重新登录！</string>
    <string name="scan_material_code_message">请扫描物料条码</string>
    <string name="material_replace_success_message">物料替换成功</string>
    <string name="material_banded_count_format">已绑定 $s 个</string>
    <string name="material_unbind_success_message">物料解绑成功</string>
    <string name="alarm_detail_empty_message">请输入警报说明</string>
    <string name="alarm_report_success_message">报警成功</string>
    <string name="desc_and_code_formatter">%1$s %2$s</string>
    <string name="report_time_formatter">派工时间：%s</string>
    <string name="receive_time_formatter">接收时间：%s</string>
    <string name="plan_finish_time_formatter">计划完成时间：%s</string>
    <string name="task_reported_number_formatter"><font color='#457FFF'>%1$d</font>/%2$d</string>
    <string name="take_photo_hint">上传图片\n(最多3张)</string>
    <string name="alarm_closer">关闭人</string>
    <string name="alarm_close_time">关闭时间</string>
    <string name="product_bar_code_formatter">产品条码：%s</string>
    <string name="material_scan_bar_hint">请扫描或输入物料条码</string>
    <string name="serial_repeat_alert_message">条码重复，请重新扫码…</string>
    <string name="remark_empty_message">请输入备注信息</string>
    <string name="quality_manage">质量管理</string>
    <string name="inspect_number">送检数量</string>
    <string name="quality_scheme">质检方案</string>
    <string name="quality_review">质检审核</string>
    <string name="quality_distribute">质检派发</string>
    <string name="quality_sign">质检签收</string>
    <string name="quality_execute">质检执行</string>
    <string name="quality_problem_record">质检问题记录</string>
    <string name="quality_finish">质检完工</string>
    <string name="quality_task">质检任务</string>
    <string name="need_quality_control">需质检</string>
    <string name="commit">提交</string>
    <string name="quality_task_receive_success">质检任务接收成功</string>
    <string name="quality_task_sign_success">质检任务签收成功</string>
    <string name="quality_task_back_out_success">质检任务撤销成功</string>
    <string name="quality_task_execute_success">质检任务执行成功</string>
    <string name="quality_task_finish_success">质检任务完工成功</string>
    <string name="quality_task_commit_success">质检任务提交成功</string>
    <string name="quality_task_receive_confirm">确认接收质检任务: %s？</string>
    <string name="quality_task_sign_confirm">确认签收质检任务: %s？</string>
    <string name="quality_task_back_out_confirm">确认撤销质检任务: %s？</string>
    <string name="quality_task_execute_confirm">确认撤销质检任务: %s？</string>
    <string name="quality_task_finish_confirm">确认完工质检任务: %s？</string>
    <string name="time_section_formatter">%1$s～%2$s</string>
    <string name="review">审核</string>
    <string name="transfer_manage">转办</string>
    <string name="sign">签收</string>
    <string name="already_distribute_number">已派发</string>
    <string name="distribute">派发</string>
    <string name="back_out">撤销</string>
    <string name="quality_problem">质检问题记录</string>
    <string name="follower">跟踪人</string>
    <string name="person_demo">张三</string>
    <string name="quality_result">质检结论</string>
    <string name="inspect_task_code">质检任务编号</string>
    <string name="edit">编辑</string>
    <string name="quality_detail">质检详情</string>
    <string name="quality_task_commit">提交质检任务</string>
    <string name="input_hint">请输入</string>
    <string name="select_hint">请选择</string>
    <string name="verifier">质检人</string>
    <string name="quality_task_search_hint">请输入质检任务编号/质检任务描述/质检方案编码/质检方案描述/产品编码/产品描述</string>
    <string name="quality_task_review">审核质检任务</string>
    <string name="verifier_result">审核结果</string>
    <string name="org_node_select">人员选择</string>
    <string name="quality_review_success_message">审核质检任务成功</string>
    <string name="quality_task_transfer">转办质检任务</string>
    <string name="quality_task_back_out">撤销质检任务</string>
    <string name="back_out_reason">撤销原因</string>
    <string name="distribute_number">派发数量</string>
    <string name="plan_data">预计时间</string>
    <string name="quality_task_distribute">派发质检任务</string>
    <string name="ng_reason">不良原因</string>
    <string name="ng_reason_empty_message">请选择不良原因</string>
    <string name="product_serial_code">产品条码</string>
    <string name="verify_conclusion">审核结论</string>
    <string name="input_or_scan_hint">请输入或扫描</string>
    <string name="quality_problem_record_detail">质检问题记录详情</string>
    <string name="attachment">附件</string>
    <string name="create_problem_record">新建质检问题记录</string>
    <string name="optimization">优化建议</string>
    <string name="cause_analysis">原因分析</string>
    <string name="solution">解决对策</string>
    <string name="occurrence_place">发生地</string>
    <string name="quality_task_code">质检任务编号</string>
    <string name="quality_problem_code">质检问题编号</string>
    <string name="quality_check_info">质检信息</string>
    <string name="inspector">质检人</string>
    <string name="trace_department">跟踪部门</string>
    <string name="inspector_time">质检时间</string>
    <string name="trace_time">跟踪时间</string>
    <string name="trace_user">跟踪人</string>
    <string name="process_cycle">处理周期</string>
    <string name="edit_problem_record">编辑质检问题记录</string>
    <string name="time_pick">选择时间</string>
    <string name="quality_task_transfer_success">质检派工单转办成功</string>
    <string name="upload_pic_hint">最多可上传3张图，每张最大5M，支持bmp、jpg、jpeg、png格式</string>
    <string name="upload_file_hint">最多上传3个，单个文档不超过50M</string>
    <string name="number_char_limit">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="task_unbind_confirm">确认解绑物料</string>
    <string name="operate_guide_search_hint">请输入作业指导书名称/产品/产品/工序</string>
    <string name="discovery_search_hint">请输入派工单编号/派工单描述</string>
    <string name="equipment_manage">设备管理</string>
    <string name="equipment_task">维保任务</string>
    <string name="equipment_info">设备信息</string>
    <string name="equipment_workorder">维保工单</string>
    <string name="equipment_type_name">设备型号</string>
    <string name="equipment_repairman">维修人</string>
    <string name="equipment_workorder_id">工单号</string>
    <string name="equipment_workorder_bh">编号</string>
    <string name="equipment_workorder_tbr">填报人</string>
    <string name="equipment_workorder_tbtime">填报时间</string>
    <string name="equipment_workorder_name">名称</string>
    <string name="equipment_workorder_marking">型号</string>
    <string name="equipment_workorder_bm">部门</string>
    <string name="equipment_workorder_location">位置</string>
    <string name="equipment_workorder_type">类型</string>
    <string name="equipment_workorder_status">处理状态</string>
    <string name="main_plan_report">主计划报工</string>
    <string name="main_plan_num">主计划数量</string>
    <string name="main_plan_code">主计划编号</string>
    <string name="product_model">型号代号</string>
    <string name="main_plan_status">主计划状态</string>
    <string name="add_operator">添加资源</string>
    <string name="setting">设置</string>
</resources>