<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/taskReceiveFragment"
        android:title="@string/task_receive"
        android:icon="@drawable/ic_op_task_receive" />
    <item
        android:id="@+id/taskPrepareFragment"
        android:title="@string/task_prepare"
        android:icon="@drawable/ic_op_task_receive" />
    <item
        android:id="@+id/taskExecuteFragment"
        android:title="@string/task_execute"
        android:icon="@drawable/ic_op_task_execute"/>
    <item
        android:id="@+id/operation_guide_nav_graph"
        android:title="@string/operate_guide"
        android:icon="@drawable/ic_op_guide"/>
    <item
        android:id="@+id/material_bind_nav_graph"
        android:title="@string/material_bind"
        android:icon="@drawable/ic_op_material_bind"/>

    <item
        android:id="@+id/material_unbind_nav_graph"
        android:title="@string/material_unbind"
        android:icon="@drawable/ic_op_material_unbind" />
    <item
        android:id="@+id/material_replace_nav_graph"
        android:title="@string/material_replace"
        android:icon="@drawable/ic_op_material_replace"/>
    <item
        android:id="@+id/taskReportFragment"
        android:title="@string/task_report"
        android:icon="@drawable/ic_op_task_report"/>
    <item
        android:id="@+id/taskFinishFragment"
        android:title="@string/task_finish"
        android:icon="@drawable/ic_op_task_finish"/>
    <item
        android:id="@+id/alarm_nav_graph"
        android:title="@string/alarm_report"
        android:icon="@drawable/ic_op_alarm"/>
</menu>