<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/taskFragment"
        android:title="@string/task"
        android:icon="@drawable/ic_nav_task"/>
    <item
        android:id="@+id/operationFragment"
        android:title="@string/operation"
        android:icon="@drawable/ic_nav_operation"/>
    <item
        android:id="@+id/placeHolder"
        android:title=""/>
    <item
        android:id="@+id/discoveryFragment"
        android:title="@string/discovery"
        android:icon="@drawable/ic_nav_discovery"/>
<!--    <item-->
<!--        android:id="@+id/messageFragment"-->
<!--        android:title="@string/message"-->
<!--        android:icon="@drawable/ic_nav_task"/>-->
    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_nav_profile"/>
</menu>