<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/alarm_report" />

  <TextView
      android:id="@+id/tv_subTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/alarm"
      style="@style/headerLineText"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_margin="16dp"
      app:layout_constraintTop_toBottomOf="@id/topAppBar"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_show_alarm_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/history_record"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="14sp"/>

    <ImageView
        android:id="@+id/iv_import_icon"
        android:layout_width="9dp"
        android:layout_height="18dp"
        android:src="@drawable/ic_import"
        app:layout_constraintTop_toBottomOf="@id/tv_subTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tv_alarm_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_detail"
        android:layout_marginStart="1dp"
        app:layout_constraintStart_toEndOf="@id/iv_import_icon"
        app:layout_constraintBottom_toBottomOf="@id/iv_import_icon"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.App.TextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/tv_alarm_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_remark"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:padding="12dp"
            android:maxLength="1000"
            android:hint="@string/remark_hint"
            tools:text="@string/long_text_test" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        style="@style/Widget.App.Button.confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>