<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".operation.fms.mission.TaskDetailFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/main_plan_report" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_item_underline"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    style="@style/detailText.label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_plan_code" />

                <TextView
                    android:id="@+id/tv_main_plan_code"
                    style="@style/detailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0011" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_item_underline"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    style="@style/detailText.label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_code" />

                <TextView
                    android:id="@+id/tv_product_code"
                    style="@style/detailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0011" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_item_underline"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    style="@style/detailText.label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_description" />

                <TextView
                    android:id="@+id/tv_product_desc"
                    style="@style/detailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0011" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_item_underline"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    style="@style/detailText.label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_model" />

                <TextView
                    android:id="@+id/tv_product_model"
                    style="@style/detailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0011" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_item_underline"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    style="@style/detailText.label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_plan_status" />

                <TextView
                    android:id="@+id/tv_main_plan_status"
                    style="@style/detailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0011" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_item_underline"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    style="@style/detailText.label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_plan_num" />

                <TextView
                    android:id="@+id/tv_main_plan_num"
                    style="@style/detailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0011" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_item_underline"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    style="@style/detailText.label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_order_code" />

                <TextView
                    android:id="@+id/tv_work_order_code"
                    style="@style/detailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0011" />
            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add_operator"
                    style="@style/actionButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_operator"
                    app:icon="@drawable/ic_add"/>
            </com.google.android.material.card.MaterialCardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_operator_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="0"
                tools:listitem="@layout/item_main_plan_operator_list" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_item_underline"
                android:orientation="horizontal">

                <!--                <ImageView-->

                <!--                    android:layout_width="8dp"-->
                <!--                    android:layout_height="18dp"-->
                <!--                    android:src="@drawable/ic_import"-->
                <!--                    app:layout_constraintTop_toBottomOf="@id/tv_subTitle"-->
                <!--                    app:layout_constraintStart_toStartOf="parent"-->
                <!--                    android:layout_marginStart="4dp"-->
                <!--                    android:layout_marginEnd="4dp"-->
                <!--                    android:layout_marginTop="16dp"/>-->

                <TextView
                    style="@style/detailText.label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/remark" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_remark"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:gravity="top"
                        android:hint="@string/remark_hint"
                        android:inputType="textMultiLine"
                        android:maxLength="1000"
                        android:padding="12dp"
                        tools:text="@string/long_text_test" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/detailText.label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    style="@style/detailText.label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="0dp"
                    android:text="@string/picture" />

                <TextView
                    android:id="@+id/tv_photo_count"
                    style="@style/detailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textRemarkColor"
                    tools:text="2/3" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_photo_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/item_task_report_photo" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm"
                style="@style/Widget.App.Button.confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/confirm"
                app:layout_constraintBottom_toBottomOf="parent" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>